--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,41 @@
-# services:
-#   app:
-#     image: app
-#     container_name: app
-#     environment:
-#       - EDGEDB_DSN=edgedb://edgedb:5656?tls_security=insecure
-#     volumes:
-#       - .:/usr/src/app  # Bind the current directory to the container
-#     networks:
-#       - internal
-#   edgedb:
-#     image: edgedb/edgedb
-#     container_name: edgedb
-#     env_file:
-#       - "./.env"
-#     volumes:
-#       - dbdata:/var/lib/edgedb/data # Data persistence
-#       - "./dbschema:/dbschema"      # Schema persistence
-#     ports:
-#       - 5656:5656
-#     networks:
-#       - internal
-# volumes:
-#   dbdata:
-# networks:
-#   internal:
-#     driver: bridge
+services:
+  web:
+    build: 
+      context: .
+      dockerfile: Dockerfile.web
+    container_name: web
+    env_file:
+      - .env
+    environment:
+      - EDGEDB_DSN=edgedb://edgedb:5656?tls_security=insecure
+    ports:
+      - 8080:8080
+    depends_on:
+      - edgedb
+
+  bot:
+    build:
+      context: .
+      dockerfile: Dockerfile.bot
+    container_name: bot
+    env_file:
+      - .env
+    environment:
+      - EDGEDB_DSN=edgedb://edgedb:5656?tls_security=insecure
+    depends_on:
+      - edgedb
+
+  edgedb:
+    image: edgedb/edgedb:latest
+    container_name: edgedb
+    environment:
+      - EDGEDB_SERVER_SECURITY=insecure_dev_mode
+      - EDGEDB_SERVER_ADMIN_UI=enabled
+      - EDGEDB_SERVER_BIND_ADDRESS=0.0.0.0
+      # - EDGEDB_INSTANCE=edgedb-docker
+      # - EDGEDB_SERVER_PASSWORD=edgedb
+    volumes:
+      - ./config/edgedb:/var/lib/edgedb/data # Data persistence
+      - ./dbschema:/dbschema     # Schema persistence
+    ports:
+      - 5656:5656
