--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
       context: .
       dockerfile: Dockerfile.web
     container_name: web
-    env_file:
-      - .env
+    volumes:
+      - ./config.yaml:/app/config.yaml
     environment:
       - EDGEDB_DSN=edgedb://edgedb:5656?tls_security=insecure
     ports:
@@ -18,8 +18,8 @@ services:
       context: .
       dockerfile: Dockerfile.bot
     container_name: bot
-    env_file:
-      - .env
+    volumes:
+      - ./config.yaml:/app/config.yaml
     environment:
       - EDGEDB_DSN=edgedb://edgedb:5656?tls_security=insecure
     depends_on:
@@ -32,10 +32,8 @@ services:
       - EDGEDB_SERVER_SECURITY=insecure_dev_mode
       - EDGEDB_SERVER_ADMIN_UI=enabled
       - EDGEDB_SERVER_BIND_ADDRESS=0.0.0.0
-      # - EDGEDB_INSTANCE=edgedb-docker
-      # - EDGEDB_SERVER_PASSWORD=edgedb
     volumes:
-      - ./config/edgedb:/var/lib/edgedb/data # Data persistence
-      - ./dbschema:/dbschema     # Schema persistence
+      - ./config/edgedb:/var/lib/edgedb/data
+      - ./dbschema:/dbschema
     ports:
       - 5656:5656
