--- a/.github/workflows/docker-build-bot.yml
+++ b/.github/workflows/docker-build-bot.yml
@@ -21,7 +21,7 @@ jobs:
             image_name: sponsors-bot
             image_tag: ${{ github.ref_name == 'main' && 'latest' || github.ref_name }}
             should_push: ${{ github.ref_name == 'main' }}
-            platforms: linux/amd64
+            platforms: linux/amd64,linux/arm64
         secrets:
             DOCKER_REGISTRY_USERNAME: ${{ github.repository_owner }}
             DOCKER_REGISTRY_PASSWORD: ${{ secrets.GITHUB_TOKEN }}
