--- a/Dockerfile.bot
+++ b/Dockerfile.bot
@@ -1,9 +1,8 @@
-FROM python:3.12-alpine3.20
+FROM python:3.12
 
 WORKDIR /app
 
-RUN apk add --no-cache gcc musl-dev linux-headers
-
+# Install dependencies
 COPY requirements.txt requirements.txt
 RUN pip install -r requirements.txt
 
