--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,18 @@
 services:
   web:
     image: ghcr.io/nelsondane/sponsors-bot-web:latest
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile.web
     container_name: web
     restart: always
     volumes:
       - ./config.yaml:/app/config.yaml
-    environment:
-      - EDGEDB_DSN=edgedb://edgedb:5656?tls_security=insecure
     ports:
       - 8080:8080
     depends_on:
-      - edgedb
+      - db
+      - bot
 
   cloudflare:
     image: cloudflare/cloudflared:latest
@@ -20,28 +22,29 @@ services:
 
   bot:
     image: ghcr.io/nelsondane/sponsors-bot:latest
+    # build:
+    #   context: .
+    #   dockerfile: Dockerfile.bot
+    # platform: linux/amd64
     container_name: bot
     restart: always
     volumes:
       - ./config.yaml:/app/config.yaml
-    environment:
-      - EDGEDB_DSN=edgedb://edgedb:5656?tls_security=insecure
     depends_on:
-      - edgedb
+      - db
 
-  edgedb:
-    image: edgedb/edgedb:latest
-    container_name: edgedb
+  db:
+    image: postgres:17
+    container_name: db
     restart: always
     environment:
-      - EDGEDB_SERVER_SECURITY=insecure_dev_mode
-      - EDGEDB_SERVER_ADMIN_UI=enabled
-      - EDGEDB_SERVER_BIND_ADDRESS=0.0.0.0
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+      - POSTGRES_DB=sponsors
     volumes:
-      - ./config/edgedb:/var/lib/edgedb/data
-      - ./dbschema:/dbschema
+      - ./db:/var/lib/postgresql/data
     ports:
-      - 5656:5656
+      - 5432:5432
 
   watchtower:
     image: containrrr/watchtower
@@ -52,7 +55,6 @@ services:
       - WATCHTOWER_INCLUDE_STOPPED=true
       - WATCHTOWER_POLL_INTERVAL=3600
     command:
-      - edgedb
       - bot
       - web
     volumes:
