--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,10 @@
 discord-oauth2.py==1.2.1
-discord.py==2.4.0
-edgedb==2.2.0
+discord.py==2.5.2
 emoji==2.14.1
 flask==3.1.0
 icmplib==3.0.4
 python-dotenv==1.0.1
 requests==2.32.3
-setuptools==75.8.0
+setuptools==76.0.0
 PyYAML==6.0.2
+psycopg2==2.9.10
